# zenve

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  TODO.md  cliff.toml  docker-compose.yml  justfile  pyproject.toml  skills-lock.json
.agents/skills/commit/: README.md  SKILL.md
.agents/skills/react-architect/: SKILL.md
.agents/skills/react-setup/: SKILL.md
.claude/plans/: zenve-artifact-prs-full.md
.claude/skills/: fastapi-architect  fastapi-monorepo-setup  react-architect  react-setup
.github/workflows/: release.yml  server-tests.yml
agents/architect/: AGENTS.md  SOUL.md
agents/architect/docs/: 00-overview.md  01-organizations-crud.md  02-api-key-auth.md  03-agent-filesystem-templates.md  04-agents-crud.md  05-adapter-interface.md  06-claude-code-adapter.md  07-celery-run-execution.md  08-runs-crud.md  09-agent-runtime-tokens.md  14-health-observability.md  15-run-event-system.md  16-org-git-versioning.md  architecture.md
docs/: ARCHITECTURE.md
docs/architecture/: 00-overview.md  03-agent-filesystem-templates.md  05-adapter-interface.md  06-claude-code-adapter.md  08-runs-crud.md  11-collaborations-data-model.md  12-collaboration-execution-engine.md  15-run-event-system.md  16-org-git-versioning.md  17-org-websocket.md  18-github-agent-templates.md
docs/plan/: run_trigger_runtime.md
plans/: api_refactoring.md  api_refactoring_01_org_to_projects.md  api_refactoring_02_delete_dead_code.md  api_refactoring_03_github_app.md  api_refactoring_04_repo_agent_api.md  api_refactoring_05_webhooks_ws.md  api_refactoring_06_migration_docs.md  cli.md  cli_refactoring.md  session_id_plan.md
scratchpad/architecture/: architecture.md
scratchpad/architecture/chunks/: 00-overview.md  01-organizations-crud.md  02-api-key-auth.md  03-agent-filesystem-templates.md  05-adapter-interface.md  06-claude-code-adapter.md  08-runs-crud.md  10-heartbeat-scheduler.md  13-collaboration-api.md
scripts/: install.sh
server/: .coverage  .env.example  CLAUDE.md  alembic.ini  conftest.py  docker-compose.yml  justfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_add_redis_creds_to_organizations.py  b3e9f2d1a4c7_drop_agents_table.py  ccf0a808e05e_add_github_installation_id_to_users.py
server/apps/api/: Dockerfile  pyproject.toml
server/apps/api/src/api/: config.py  lifespan.py  main.py
server/apps/api/src/api/db/: database.py  models.py
server/apps/api/src/api/models/: agent.py  api_key.py  auth.py  membership.py  preset.py  project.py  repo.py  workspace.py
server/apps/api/src/api/routes/: __init__.py  agent.py  api_key.py  auth.py  github.py  org.py  preset.py  project.py  run.py  template.py  worker.py  workspace.py  ws.py
server/apps/api/src/api/services/: __init__.py  agent.py  api_key.py  api_key_auth.py  auth.py  github.py  membership.py  project.py  repo_reader.py  repo_writer.py  template.py  workspace.py
server/apps/api/src/api/utils/: api_key.py  auth.py  github.py  scaffolding.py
server/apps/cli/: ARCHITECTURE.md  CLAUDE.md  README.md  build_entry.py  pyproject.toml  zenve.spec
server/apps/cli/src/zenve_cli/: cli.py  config.py  constants.py  credentials.py  gateway_client.py  runtime_detect.py  worker.py
server/apps/cli/src/zenve_cli/commands/: agent.py  doctor.py  env.py  init.py  pipeline.py  run.py  server.py  skill.py  snapshot.py  start.py  status.py  tui.py  ui.py  workspace.py
server/apps/cli/src/zenve_cli/console/: __init__.py  formatters.py  logo.py  theme.py  tui.py
server/apps/cli/src/zenve_cli/core/: claims.py  config.py  console.py  discovery.py  env.py  pipeline.py
server/apps/cli/src/zenve_cli/events/: emitter.py  types.py
server/apps/cli/src/zenve_cli/github/: labels.py  snapshot.py
server/apps/cli/src/zenve_cli/integrations/github/: client.py  labels.py  snapshot.py
server/apps/cli/src/zenve_cli/models/: agent.py  claims.py  github_template.py  run_result.py  settings.py  snapshot.py
server/apps/cli/src/zenve_cli/runtime/: client.py  commit.py  executor.py  parallel.py  worktree.py
server/apps/cli/src/zenve_cli/services/: agent.py  agent_lock.py  scaffolding.py  template.py
server/apps/cli/src/zenve_cli/utils/: __init__.py  scaffolding.py  time.py
server/apps/runtime/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
server/apps/runtime/src/runtime/: lifespan.py  main.py  run_store.py  ws_manager.py
server/apps/runtime/src/runtime/db/: database.py  models.py
server/apps/runtime/src/runtime/models/: config.py  errors.py  issue.py  pr.py  run.py  settings.py  snapshot.py  template.py  workspace.py
server/apps/runtime/src/runtime/routes/: __init__.py  auth.py  core.py  issue.py  pr.py  run.py  settings.py  skill.py  snapshot.py  template.py  workspace.py
server/apps/runtime/src/runtime/services/: __init__.py  auth_service.py  issue_service.py  pr_service.py  run_db_service.py  run_service.py  run_trigger_service.py  scheduler_service.py  settings_service.py  snapshot_service.py  template_service.py  workspace_service.py
server/apps/runtime/src/runtime/utils/: auth.py  settings.py
server/data/templates/default/: HEARTBEAT.md.j2  TOOLS.md.j2
server/examples/: clean_table.py  mock_subprocess_stdout.py  read_agent_files.py  replay_events.py  reset_db.py  run_adapter.py  run_claude_code.py  run_core.py  zenve_issues_usage.py
src/zenve/: main.py
src/zenve/agents/: __init__.py  base.py  claude_code.py  registry.py
src/zenve/api/: lifespan.py
src/zenve/config/: settings.py
src/zenve/db/: database.py  models.py
src/zenve/models/: __init__.py  adapter.py  agent.py  api_key.py  org.py
src/zenve/services/: __init__.py  agent.py  api_key.py  auth.py  filesystem.py  org.py  run_context.py
src/zenve/utils/: api_key_auth.py  auth.py
ui/: .env.example  CLAUDE.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/src/: app.tsx  config.ts  main.css  main.tsx  routes.tsx  types.ts
ui/src/hooks/: use-mobile.ts  use-next-cron-fire.ts  use-org-websocket.ts  (+3 more)
(+154 files in other folders)
