[project]
name = "zenve-workspace"
version = "0.1.0"
description = "zenve monorepo workspace"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "zenve-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md"]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/cli",
    "packages/*",
]

[tool.uv.sources]
zenve-config = { workspace = true }
zenve-db = { workspace = true }
zenve-models = { workspace = true }
zenve-utils = { workspace = true }
zenve-services = { workspace = true }
zenve-adapters = { workspace = true }
zenve-cli = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.13",
    "pyright>=1.1.407",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
reportArgumentType = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = [
    "zenve_adapters",
    "zenve_config",
    "zenve_db",
    "zenve_models",
    "zenve_utils",
    "zenve_services",
]
