[project]
name = "zenve-workspace"
version = "0.1.0"
description = "zenve monorepo workspace"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md"]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/cli",
    "apps/runtime",
    "packages/*",
]

[tool.uv.sources]
zenve-adapters = { workspace = true }
zenve-cli = { workspace = true }
zenve-engine = { workspace = true }
zenve-runtime = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.13",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
reportArgumentType = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = [
    "zenve_adapters",
    "zenve_engine",
    "api",
    "runtime",
    "zenve_cli",
]
