[project]
name = "zenve-api"
version = "0.1.0"
description = "zenve FastAPI application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2",
    "pydantic-settings",
    "bcrypt",
    "python-jose[cryptography]",
    "httpx>=0.27",
    "pyyaml",
    "zenve-adapters",
]

[project.scripts]
api-start = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
zenve-adapters = { workspace = true }
