[project]
name = "zenve-cli"
version = "0.1.3"
description = "Zenve CLI — autonomous agent runtime for GitHub repos"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "questionary>=2.0",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings",
    "pyyaml",
    "python-dotenv>=1.0",
    "zenve-adapters",
    "zenve-engine",
    "textual>=8.2.4",
    "croniter>=1.4",
]

[project.scripts]
zenve = "zenve_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zenve_cli"]

[tool.uv.sources]
zenve-adapters = { workspace = true }
zenve-engine = { workspace = true }
