[project]
name = "zenve-runtime"
version = "0.1.0"
description = "zenve runtime daemon"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "zenve-config",
    "zenve-models",
    "zenve-services",
    "zenve-utils",
]

[project.scripts]
runtime-start = "runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
zenve-config = { workspace = true }
zenve-models = { workspace = true }
zenve-services = { workspace = true }
zenve-utils = { workspace = true }
