[project]
name = "zenve-runtime"
version = "0.1.0"
description = "zenve runtime daemon"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2",
    "croniter>=2.0",
    "pyyaml",
    "zenve-engine",
]

[project.scripts]
runtime-start = "runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
zenve-engine = { workspace = true }
